--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -14,6 +14,9 @@ test:
   <<: *defaults
   database: cream_test
 
+cucumber:
+  <<: *test
+    
 # set these environment variables on your prod server
 production:
   <<: *defaults
