--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,5 +1,12 @@
 defaults: &defaults
   host: localhost
+  autocreate_indexes: false
+  allow_dynamic_fields: true
+  include_root_in_json: false
+  parameterize_keys: true
+  persist_in_safe_mode: false
+  raise_not_found_error: true
+  reconnect_time: 3
   # slaves:
   #   - host: slave1.local
   #     port: 27018
